Devcontainer Addition, some LLM Rejuvenation and non-working Postgre Inclusion.