@@ -1,79 +1,60 @@
 package frauenhaus;
 
-import java.awt.Toolkit;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.sql.ResultSet;
-import java.sql.ResultSetMetaData;
-import java.sql.SQLException;
-import java.text.NumberFormat;
-
+import compucrash.*;
 import org.apache.poi.hssf.usermodel.HSSFCell;
 import org.apache.poi.hssf.usermodel.HSSFRow;
 import org.apache.poi.hssf.usermodel.HSSFSheet;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.poifs.filesystem.POIFSFileSystem;
+
+import java.awt.*;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.text.NumberFormat;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-
-import ch.kova.connector.exception.ComponentObjectModelException;
-import ch.kova.connector.exception.ItemNotFoundException;
-import ch.kova.connector.exception.LibraryNotFoundException;
-import ch.kova.connector.ms.outlook.Outlook;
-import ch.kova.connector.ms.outlook.folder.FolderType;
-import ch.kova.connector.ms.outlook.folder.OutlookFolder;
-import ch.kova.connector.ms.outlook.item.ItemType;
-import ch.kova.connector.ms.outlook.mail.OutlookMail;
-
-import compucrash.CCommand;
-import compucrash.CDataManager;
-import compucrash.CProperties;
-import compucrash.CPropertyManager;
-import compucrash.CReport;
-import compucrash.CReportFrame;
-import compucrash.CTable;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class CReportSpendenQuittungen extends CCommand implements CReport {
-    
+
+    private static final Logger LOGGER = Logger.getLogger(CReportSpendenQuittungen.class.getName());
+    private static final String SPENDEN_QUITTUNG_TEMPLATE = "/SpendenQuittungen.xls";
+    private static final String SPENDEN_QUITTUNG_PREFIX = "\\SpendenQuittung";
+    private final NumberFormat nf = NumberFormat.getInstance();
+    private final String reports;
+    private final String vorlagen;
+    private final String excel;
+    private final DateTimeFormatter fmt = DateTimeFormatter.ofPattern("dd.MM.yyyy");
     private CProperties p;
-    private NumberFormat nf = NumberFormat.getInstance();
-    private String reports;
-    private String vorlagen;
-    private String excel;
-    private POIFSFileSystem fsin;
-    private HSSFWorkbook wb;
-    private HSSFSheet sheet;
-    private HSSFRow row;
-    private HSSFCell cell;
     private String jahr = "";
-    private DateTimeFormatter fmt = DateTimeFormatter.ofPattern("dd.MM.yyyy");
-    private String SQLString;
-    private ResultSet rset;
 
     public CReportSpendenQuittungen() {
         this.reports = CPropertyManager.getInstance().getProperty("reports");
         this.vorlagen = CPropertyManager.getInstance().getProperty("vorlagen");
         this.excel = CPropertyManager.getInstance().getProperty("excel");
     }
-    
+
     public Object execute(Object parameters) {
-        
+
         p = new CProperties();
-        p.put("this",this);
+        p.put("this", this);
         CProperties pA = new CProperties();
-        p.put(Integer.toString(1),pA);
+        p.put(Integer.toString(1), pA);
         pA.put("label", "Jahr");
         pA.put("equals", "1");
         new CReportFrame(p);
-        
+
         return null;
     }
-    
+
     public void go() {
         // Jahr setzen und Reports aufrufen        
-        if (((CProperties)p.get("1")).get("equalsValue") != null) {
+        if (((CProperties) p.get("1")).get("equalsValue") != null) {
             if (!((CProperties) p.get("1")).get("equalsValue").toString().trim().equalsIgnoreCase("")) {
                 String value = ((CProperties) p.get("1")).get("equalsValue").toString().trim();
                 jahr = value;
@@ -81,166 +62,179 @@ public class CReportSpendenQuittungen extends CCommand implements CReport {
         }
         nf.setMinimumFractionDigits(2);
         nf.setMaximumFractionDigits(2);
-        try {
-            SQLString = "SELECT distinct s.verein, a.spendentyp " +
-            		"FROM frauenhaus.spende s, frauenhaus.spendenart a " +
-            		"WHERE a.spendenart = s.spendenart " +
-            		"AND YEAR(s.datum) = " + jahr + " " + 
-            		"AND a.spendentyp IN ('Geldspende dauer', 'Mitgliedsbeitrag') " + 
-            		"ORDER BY s.verein, a.spendentyp";
-            System.out.println(SQLString);
-            ResultSet rset = CDataManager.getInstance().getStatement().executeQuery(SQLString);
-            while (rset.next()) {
-                String verein = rset.getString(1);
-                String spendentyp = rset.getString(2);
-                report(verein, spendentyp);          
+        String sql = "SELECT distinct s.verein, a.spendentyp " +
+                "FROM frauenhaus.spende s, frauenhaus.spendenart a " +
+                "WHERE a.spendenart = s.spendenart " +
+                "AND YEAR(s.datum) = ? " +
+                "AND a.spendentyp IN ('Geldspende dauer', 'Mitgliedsbeitrag') " +
+                "ORDER BY s.verein, a.spendentyp";
+        CMessage.print(sql);
+        try (PreparedStatement stmt = CDataManager.getInstance().getConnection().prepareStatement(sql)) {
+            stmt.setString(1, jahr);
+            try (ResultSet rset = stmt.executeQuery()) {
+                while (rset.next()) {
+                    String verein = rset.getString(1);
+                    String spendentyp = rset.getString(2);
+                    report(verein, spendentyp);
+                }
             }
         } catch (SQLException e) {
-            System.out.println(e);
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
         }
 
     }
-    
+
     private void report(String verein, String spendentyp) {
-        System.out.println("Report: " + verein + " " + spendentyp);
-        try {
-            fsin = new POIFSFileSystem(new FileInputStream(vorlagen + "/SpendenQuittungen.xls"));
-            wb = new HSSFWorkbook(fsin);
-            SQLString = "SELECT DISTINCT m.mitglied, m.anrede, m.vorname, m.name, m.name2, m.name3, m.strasse, m.plz, m.ort " +
-            	"FROM frauenhaus.mitglied m " +
-            	"WHERE EXISTS (SELECT * " +
-            		"FROM frauenhaus.spende s, frauenhaus.spendenart a " +
-            		"WHERE s.mitglied = m.mitglied " +
-            		"AND s.spendenart = a.spendenart " +
-            		"AND YEAR(s.datum) = " + jahr + " " +
-            		"AND a.spendentyp = '" + spendentyp + "' " +
-            		"AND s.verein = '" + verein + "')";
-            rset = CDataManager.getInstance().getStatement().executeQuery(SQLString);
-            sheet = wb.getSheetAt(0);
-            int line = 1;
-            while (rset.next()) {
-                row = sheet.createRow(line++);
-                String mitglied = rset.getString(1);
-                cell = row.createCell((short)0);
-                cell.setCellValue(rset.getString(2));
-                cell = row.createCell((short)1);
-                cell.setCellValue(rset.getString(3));
-                cell = row.createCell((short)2);
-                cell.setCellValue(rset.getString(4));
-                cell = row.createCell((short)3);
-                cell.setCellValue(rset.getString(5));
-                cell = row.createCell((short)4);
-                cell.setCellValue(rset.getString(6));
-                cell = row.createCell((short)5);
-                cell.setCellValue(rset.getString(7));
-                cell = row.createCell((short)6);
-                cell.setCellValue(rset.getString(8));
-                cell = row.createCell((short)7);
-                cell.setCellValue(rset.getString(9));
-                cell = row.createCell((short)8);
-                cell.setCellValue(verein);
-                cell = row.createCell((short)9);
-                cell.setCellValue(spendentyp);
-                cell = row.createCell((short)10);
-                cell.setCellValue(jahr);
-                // Gesamtbetrag, BetragInWorten, Beträge
-                SQLString = "SELECT s.datum, s.betrag, coalesce(s.bemerkung, ' ') " +
-                	"FROM frauenhaus.spende s, frauenhaus.spendenart a " +
-                	"WHERE s.mitglied = " + mitglied + " " +
-                	"AND YEAR(s.datum) = " + jahr + " " +
-                	"AND s.spendenart = a.spendenart " +
-                	"AND a.spendentyp = '" + spendentyp + "' " +
-                	"AND verein = '" + verein + "' " +
-                	"ORDER BY s.datum";
-                ResultSet rset0 = CDataManager.getInstance().getStatement().executeQuery(SQLString);
-                double betrag = 0;
-                String betraege = "";
-                String bemerkung = "";
-                while(rset0.next()) {
-                    LocalDate datum = rset0.getDate(1).toLocalDate();
-                    double einzelbetrag = rset0.getDouble(2);
-                    betraege += fmt.format(datum) + "\t" + nf.format(einzelbetrag) + "\n";
-                    betrag += einzelbetrag;                    
-                    String temp = rset0.getString(3).trim();
-                    if (temp.length() > 0) {
-                        bemerkung +=  temp + "\n";                        
+        CMessage.print("Report: " + verein + " " + spendentyp);
+        String sql = "SELECT DISTINCT m.mitglied, m.anrede, m.vorname, m.name, m.name2, m.name3, m.strasse, m.plz, m.ort " +
+                "FROM frauenhaus.mitglied m " +
+                "WHERE EXISTS (SELECT * " +
+                "FROM frauenhaus.spende s, frauenhaus.spendenart a " +
+                "WHERE s.mitglied = m.mitglied " +
+                "AND s.spendenart = a.spendenart " +
+                "AND YEAR(s.datum) = ? " +
+                "AND a.spendentyp = ? " +
+                "AND s.verein = ?)";
+        try (POIFSFileSystem fsin = new POIFSFileSystem(new FileInputStream(vorlagen + SPENDEN_QUITTUNG_TEMPLATE));
+             HSSFWorkbook wb = new HSSFWorkbook(fsin);
+             PreparedStatement stmt = CDataManager.getInstance().getConnection().prepareStatement(sql)) {
+            stmt.setString(1, jahr);
+            stmt.setString(2, spendentyp);
+            stmt.setString(3, verein);
+            try (ResultSet rset = stmt.executeQuery()) {
+                HSSFSheet sheet = wb.getSheetAt(0);
+                int line = 1;
+                while (rset.next()) {
+                    HSSFRow row = sheet.createRow(line++);
+                    String mitglied = rset.getString(1);
+                    setCellValue(row, 0, rset.getString(2));
+                    setCellValue(row, 1, rset.getString(3));
+                    setCellValue(row, 2, rset.getString(4));
+                    setCellValue(row, 3, rset.getString(5));
+                    setCellValue(row, 4, rset.getString(6));
+                    setCellValue(row, 5, rset.getString(7));
+                    setCellValue(row, 6, rset.getString(8));
+                    setCellValue(row, 7, rset.getString(9));
+                    setCellValue(row, 8, verein);
+                    setCellValue(row, 9, spendentyp);
+                    setCellValue(row, 10, jahr);
+
+                    String amountSql = "SELECT s.datum, s.betrag, coalesce(s.bemerkung, ' ') " +
+                            "FROM frauenhaus.spende s, frauenhaus.spendenart a " +
+                            "WHERE s.mitglied = ? " +
+                            "AND YEAR(s.datum) = ? " +
+                            "AND s.spendenart = a.spendenart " +
+                            "AND a.spendentyp = ? " +
+                            "AND verein = ? " +
+                            "ORDER BY s.datum";
+                    try (PreparedStatement amountStmt = CDataManager.getInstance().getConnection().prepareStatement(amountSql)) {
+                        amountStmt.setString(1, mitglied);
+                        amountStmt.setString(2, jahr);
+                        amountStmt.setString(3, spendentyp);
+                        amountStmt.setString(4, verein);
+                        try (ResultSet rset0 = amountStmt.executeQuery()) {
+                            double betrag = 0;
+                            StringBuilder betraege = new StringBuilder();
+                            StringBuilder bemerkung = new StringBuilder();
+                            while (rset0.next()) {
+                                LocalDate datum = rset0.getDate(1).toLocalDate();
+                                double einzelbetrag = rset0.getDouble(2);
+                                betraege.append(fmt.format(datum)).append('\t').append(nf.format(einzelbetrag)).append('\n');
+                                betrag += einzelbetrag;
+                                String temp = rset0.getString(3).trim();
+                                if (!temp.isEmpty()) {
+                                    bemerkung.append(temp).append('\n');
+                                }
+                            }
+                            trimTrailingNewline(betraege);
+                            trimTrailingNewline(bemerkung);
+                            setCellValue(row, 11, nf.format(betrag));
+                            setCellValue(row, 12, betragInWorten(nf.format(betrag)));
+                            setCellValue(row, 13, betraege.toString());
+                            setCellValue(row, 14, bemerkung.toString());
+                        }
                     }
-                    if (bemerkung.length() > 0) bemerkung = bemerkung.substring(0,bemerkung.length()-1);
                 }
-                if (betraege.length() > 0) betraege = betraege.substring(0, betraege.length() - 1);
-                cell = row.createCell((short)11);
-                cell.setCellValue(nf.format(betrag));
-                cell = row.createCell((short)12);
-                cell.setCellValue(betragInWorten(nf.format(betrag)));
-                cell = row.createCell((short)13);
-                cell.setCellValue(betraege);
-                cell = row.createCell((short)14);
-                cell.setCellValue(bemerkung);
             }
-            FileOutputStream fileOut = new FileOutputStream(reports + "\\SpendenQuittung" + verein + spendentyp + ".xls");
-            wb.write(fileOut);
-            fileOut.close();
-            Runtime.getRuntime().exec(excel + "\\winword.exe /z\"" + vorlagen + "\\SpendenQuittung" + verein + spendentyp + ".dot\"");
-            System.out.println(excel + "\\winword.exe /z\"" + vorlagen + "\\SpendenQuittung" + verein + spendentyp + ".dot\"");
-            
-        } catch (FileNotFoundException e) {
-            e.printStackTrace();
-            Toolkit.getDefaultToolkit().beep();
+            try (FileOutputStream fileOut = new FileOutputStream(reports + SPENDEN_QUITTUNG_PREFIX + verein + spendentyp + ".xls")) {
+                wb.write(fileOut);
+            }
+            new ProcessBuilder(
+                    excel + "\\winword.exe",
+                    "/z" + vorlagen + SPENDEN_QUITTUNG_PREFIX + verein + spendentyp + ".dot"
+            ).start();
+            CMessage.print(excel + "\\winword.exe /z\"" + vorlagen + SPENDEN_QUITTUNG_PREFIX + verein + spendentyp + ".dot\"");
+
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             Toolkit.getDefaultToolkit().beep();
         } catch (SQLException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             Toolkit.getDefaultToolkit().beep();
         }
     }
 
     private String betragInWorten(String zahl) {
         char[] ziffer = zahl.toCharArray();
-        String wert = "";
+        StringBuilder wert = new StringBuilder();
         for (int i = 0; i < ziffer.length; i++) {
             switch (ziffer[i]) {
-            case '1':
-                wert += "Eins - ";
-                break;
-            case '2':
-                wert += "Zwei - ";
-                break;
-            case '3':
-                wert += "Drei - ";
-                break;
-            case '4':
-                wert += "Vier - ";
-                break;
-            case '5':
-                wert += "Fünf - ";
-                break;
-            case '6':
-                wert += "Sechs - ";
-                break;
-            case '7':
-                wert += "Sieben - ";
-                break;
-            case '8':
-                wert += "Acht - ";
-                break;
-            case '9':
-                wert += "Neun - ";
-                break;
-            case '0':
-                wert += "Null - ";
-                break;
-            case ',':
-                wert += "Komma - ";
-                break;
+                case '1':
+                    wert.append("Eins - ");
+                    break;
+                case '2':
+                    wert.append("Zwei - ");
+                    break;
+                case '3':
+                    wert.append("Drei - ");
+                    break;
+                case '4':
+                    wert.append("Vier - ");
+                    break;
+                case '5':
+                    wert.append("Fï¿½nf - ");
+                    break;
+                case '6':
+                    wert.append("Sechs - ");
+                    break;
+                case '7':
+                    wert.append("Sieben - ");
+                    break;
+                case '8':
+                    wert.append("Acht - ");
+                    break;
+                case '9':
+                    wert.append("Neun - ");
+                    break;
+                case '0':
+                    wert.append("Null - ");
+                    break;
+                case ',':
+                    wert.append("Komma - ");
+                    break;
+                default:
+                    break;
             }
         }
-        wert = wert.substring(0,wert.length() - 2);
-        return wert;
+        if (wert.length() >= 3) {
+            wert.setLength(wert.length() - 3);
+        }
+        return wert.toString();
     }
-    
+
     public void set(CProperties p) {
         this.p = p;
     }
-    
+
+    private void setCellValue(HSSFRow row, int index, String value) {
+        HSSFCell cell = row.createCell((short) index);
+        cell.setCellValue(value);
+    }
+
+    private void trimTrailingNewline(StringBuilder builder) {
+        if (builder.length() > 0) {
+            builder.setLength(builder.length() - 1);
+        }
+    }
+
 }
